--- a/style.css
+++ b/style.css
@@ -18,3 +18,9 @@
 #start ,#status{
     font-size: 22px;
 }
+video{
+    background: url('game_console.png');
+    background-size: cover;
+    background-position: center;
+    padding: 25px;
+}
